[package]
name = "algos"
version = "0.1.0"
edition = "2021"

[features]
hmm = []
serde-1 = [
    "serde/derive", # enable serde_derive
    "ndarray/serde-1" # reexport serde-1 to ndarray for serialization
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rayon = "1.5"
ndarray = "0.15"
rand = "0.8"
rand_chacha = "0.3"
spectral = "0.6.0"
serde = { version = "1.0.116", optional = false }
nalgebra = "0.29"
nalgebra-lapack = "0.14"

argmin = "0.10.0"
argmin-math = { version = "0.4", features = ["ndarray_latest", "nalgebra_latest"] }
argmin_testfunctions = "0.2.0"
argmin-observer-slog = "0.1.0"

[dev-dependencies]
rand = "0.8"
approx = "0.4"

[profile.dev]
opt-level = 3  # Otherwise the tests run too slow

# [build]
# rustflags = ["-C", "target-cpu=native"]