[package]
name = "algos"
version = "0.1.0"
edition = "2021"

[features]
hmm = []
serde-1 = [
    "serde/derive",
    "ndarray/serde-1",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rayon = ">1.5"
ndarray = { version = ">0.15", features = ["serde-1"] }
rand = ">0.8"
rand_distr = ">0.4"
rand_chacha = ">0.3"
spectral = "0.6.0"
serde = { version = ">1.0.116", optional = true }
statrs = "0.18.0"
nalgebra = ">0.29"
petgraph = "0.8.1"

argmin = "0.10.0"
argmin-math = { version = "0.4", features = ["ndarray_latest", "nalgebra_latest"] }
argmin_testfunctions = "0.2.0"
argmin-observer-slog = "0.1.0"

GSL = "7.0"

[dev-dependencies]
approx = ">0.4"
criterion = ">0.4"

[profile.dev]
opt-level = 3  # Otherwise the tests run too slow

# NB build customized to mac/arm 64.
[build]
rustflags = ["-C", "target-cpu=arm64"]